syntax = "proto3";

package kvraftpb;

option go_package = "github.com/eraft-io/eraft/kvraftpb";

enum Op {
    PUT = 0;
    APPEND = 1;
    GET = 2;
}

message CommandRequest {
    string key = 1;
    string value = 2;
    Op op = 3;
    int64 client_id = 4;
    int64 command_id = 5;
}

message CommandResponse {
    string err = 1;
    string value = 2;
}

message GetStatusRequest {}

message GetStatusResponse {
    int64 id = 1;
    string state = 2;
    int64 term = 3;
    int64 last_applied = 4;
    int64 commit_index = 5;
}

service KVService {
    rpc Command(CommandRequest) returns (CommandResponse);
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}
