syntax = "proto3";

package raftpb;

option go_package = "github.com/eraft-io/eraft/raftpb";

message Entry {
    int64 index = 1;
    int64 term = 2;
    bytes command = 3;
}

message RequestVoteRequest {
    int64 term = 1;
    int64 candidate_id = 2;
    int64 last_log_index = 3;
    int64 last_log_term = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesRequest {
    int64 term = 1;
    int64 leader_id = 2;
    int64 prev_log_index = 3;
    int64 prev_log_term = 4;
    int64 leader_commit = 5;
    repeated Entry entries = 6;
}

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
    int64 conflict_index = 3;
    int64 conflict_term = 4;
}

message InstallSnapshotRequest {
    int64 term = 1;
    int64 leader_id = 2;
    int64 last_included_index = 3;
    int64 last_included_term = 4;
    bytes data = 5;
}

message InstallSnapshotResponse {
    int64 term = 1;
}

service RaftService {
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}
